--- a/views/aboutus.jade
+++ b/views/aboutus.jade
@@ -5,16 +5,30 @@ block content
 	section#body.container
 		.row
 			.span7
-				ul
+				ul.nav.unstyled.inline
 					li Info
 					li Philosophy
 					li Beliefs
-				h4 Joyent is the high-performance cloud infrastructure company, offering the only solution specifically built to power real-time web and mobile applications. 
+				div
+					p Joyent is the high-performance cloud infrastructure company, offering the only solution specifically built to power real-time web and mobile applications. 
 			.span4
 				img(src="http://www.joyent.com/content/08-company/header.jpg?v=1372167145")
-		.row
+		.row(style='background: rgb(242, 247, 253);padding: 26px 8px;')
 			.span4
-				h4 Management
-			.span7
-				h4 Partners
-				-each person in rol
+				h4
+					a(href='/rol/management') Management
+				-each person in management
+					div.row(style='margin-bottom:25px;')
+						div.span1
+							img(src='/files/' + person.image, style='width: 75px;border-radius: 50%;')
+						div.span3
+							h4=person.name
+							span=person.position
+			.span4
+				h4 Affiliates
+			.span3
+				h4 News
+				-for(v in news)
+					span=v
+				
+
