--- a/views/aboutus.jade
+++ b/views/aboutus.jade
@@ -5,11 +5,8 @@ block content
 	section#body.container
 		.row
 			.span7
-				ul.nav.unstyled.inline
-					li Info
-					li Philosophy
-					li Beliefs
-				div
+				article
+					h3 Our history
 					p Joyent is the high-performance cloud infrastructure company, offering the only solution specifically built to power real-time web and mobile applications. 
 			.span4
 				img(src="http://www.joyent.com/content/08-company/header.jpg?v=1372167145")
@@ -26,6 +23,9 @@ block content
 							span=person.position
 			.span4
 				h4 Affiliates
+					div.row
+						-each affiliate in affiliates
+							img(src="/files/" + affiliate.image, style="opacity: .5;-webkit-filter: grayscale(1);")
 			.span3
 				h4 News
 				-for(v in news)
