--- a/views/aboutus.jade
+++ b/views/aboutus.jade
@@ -6,8 +6,10 @@ block content
 		.row
 			.span7
 				article
-					h3 Our history
-					p Joyent is the high-performance cloud infrastructure company, offering the only solution specifically built to power real-time web and mobile applications. 
+					-each article in info
+						section	
+							h3=article.name
+							p!=article.details
 			.span4
 				img(src="http://www.joyent.com/content/08-company/header.jpg?v=1372167145")
 		.row(style='background: rgb(242, 247, 253);padding: 26px 8px;')
@@ -28,6 +30,7 @@ block content
 							img(src="/files/" + affiliate.image, style="opacity: .5;-webkit-filter: grayscale(1);")
 			.span3
 				h4 News
+				-console.log(news)
 				-for(v in news)
 					span=v
 				
