--- a/lib/cms/views/layout.jade
+++ b/lib/cms/views/layout.jade
@@ -36,7 +36,11 @@ html.fuelux
 						div.nav-collapse.navbar-inverse-collapse.collapse
 							ul.nav
 								li
-									a(href='/cms') CMS
+									a(href='/cms') Modules
+								li
+									a(href='/components') Components
+								li
+									a(href='/cms/pages') Pages
 								li
 									a(href='/cms/users') Users
 								li
@@ -48,7 +52,7 @@ html.fuelux
 									a(href='/') &laquo; Back to ROL
 								li
 									a(href='/cms/logout') Logout
-			h3 hehe
+			h3 Build Modules
 		block content
 		//modals
 		div#change-password.modal.hide.fade(tabindex='-1',role='dialog',aria-hidden='true',style='display: none;')
