--- a/lib/cms/views/pages.jade
+++ b/lib/cms/views/pages.jade
@@ -64,3 +64,5 @@ block content
 							div(style='padding: 10px 0px;border: solid 1px #c0c0c0;display: inline;')
 								span(style='    display: inline-block;    color: #c0c0c0;') http://website.com/
 								span(contenteditable="true", style='    width: 50%;    display: inline-block;') url
+							hr
+							h4 hey
