--- a/lib/cms/views/layout.jade
+++ b/lib/cms/views/layout.jade
@@ -36,9 +36,9 @@ html.fuelux
 						div.nav-collapse.navbar-inverse-collapse.collapse
 							ul.nav
 								li
-									a(href='/cms') Modules
+									a(href='/cms') Data Sources
 								li
-									a(href='/components') Components
+									a(href='/cms/components') Components
 								li
 									a(href='/cms/pages') Pages
 								li
@@ -49,7 +49,7 @@ html.fuelux
 									a(href='#change-password',data-toggle="modal", role="button") Change password
 							ul.nav.pull-right
 								li
-									a(href='/') &laquo; Back to ROL
+									a(href='/') &laquo; Back to Home
 								li
 									a(href='/cms/logout') Logout
 			h3 Build Modules
